--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World, this is the best computing course ever</h1>
 </body>
 </html>
